--- a/about us/about us.html
+++ b/about us/about us.html
@@ -42,6 +42,8 @@
         <img class="genius_6" src="picture/ginius6.png">
         
 <!--        hi -->
+<!--        hi from mark -->
+
      
     </div>
 </body>
