--- a/about us/about us.html
+++ b/about us/about us.html
@@ -34,17 +34,17 @@
         <img class="tall_5" src="picture/tall5.png" style="visibility: hidden;">
         <img class="tall_6" src="picture/tall6.png" style="visibility: hidden;">
       
-        <img class="genius_1" src="picture/ginius1.png" width="15%" height="14%" >
-        <img class="genius_2" src="picture/ginius2.png" width="15%" height="14%" >
-        <img class="genius_3" src="picture/ginius3.png" width="15%" height="14%">
-        <img class="genius_4" src="picture/ginius4.png" width="15%" height="14%">
-        <img class="genius_5" src="picture/ginius5.png" width="15%" height="14%">
-        <img class="genius_6" src="picture/ginius6.png" width="15%" height="14%">
+        <img class="genius_1" src="picture/ginius1.png" width="15%" height="15%" >
+        <img class="genius_2" src="picture/ginius2.png" width="15%" height="15%" >
+        <img class="genius_3" src="picture/ginius3.png" width="15%" height="15%">
+        <img class="genius_4" src="picture/ginius4.png" width="15%" height="15%">
+        <img class="genius_5" src="picture/ginius5.png" width="15%" height="15%">
+        <img class="genius_6" src="picture/ginius6.png" width="15%" height="15%">
 
-        <img class="self_1" src="picture/Self1.png" style="visibility: hidden;" >
+        <!-- <img class="self_1" src="picture/Self1.png" style="visibility: hidden;" >
         <img class="self_2" src="picture/Self2.png" style="visibility: hidden;" >
         <img class="self_3" src="picture/Self3.png" style="visibility: hidden;">
-        <img class="self_4" src="picture/Self4.png" >
+        <img class="self_4" src="picture/Self4.png" > -->
         <!-- <img class="self_5" src="picture/Self5.png" > -->
         <!-- <img class="self_6" src="picture/Self6.png" > -->
         
