--- a/about us/about us.html
+++ b/about us/about us.html
@@ -49,6 +49,12 @@
         <img class="self_4" src="picture/Self4.png" > -->
         <!-- <img class="self_5" src="picture/Self5.png" > -->
         <!-- <img class="self_6" src="picture/Self6.png" > -->
+        <img class="about_us" src="picture/un-about us.png">
+        <img class="news" src="picture/un-news.png">
+        <img class="equipment" src="picture/un-equipment.png">
+        <img class="together"  src="picture/un-together.png">
+        <img class="connect"  src="picture/un-connect us.png">
+
 
         <img class="name_1" src="picture/un-name1.png">
         <img class="name_2" src="picture/un-name2.png">
